--- a/content/cp 2022.html
+++ b/content/cp 2022.html
@@ -142,6 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>cp 2022</h1>
+<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/cp%202022.html?src=https://gist.githubusercontent.com/Changyou41123220/496422d1187e33249d9dbfbe71d1a06d/raw/cfd6ba1f0a338a8d6030ad64a04013018314bab6/radom_draw_1b.py&amp;amp
+src2=https://gist.githubusercontent.com/Changyou41123220/496422d1187e33249d9dbfbe71d1a06d/raw/cfd6ba1f0a338a8d6030ad64a04013018314bab6/list_1b_static_site.py">test</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -426,8 +428,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <!-- editor2 結束 --><hr/>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-<br />About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script><br />About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
