--- a/content/cp 2022.html
+++ b/content/cp 2022.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>cp 2022</h1>
-<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/cp%202022.html?src=https://gist.githubusercontent.com/Changyou41123220/496422d1187e33249d9dbfbe71d1a06d/raw/cfd6ba1f0a338a8d6030ad64a04013018314bab6/radom_draw_1b.py&amp;amp
+<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/cp%202022.html?src=https://gist.githubusercontent.com/Changyou41123220/496422d1187e33249d9dbfbe71d1a06d/raw/cfd6ba1f0a338a8d6030ad64a04013018314bab6/radom_draw_1b.py&amp;
 src2=https://gist.githubusercontent.com/Changyou41123220/496422d1187e33249d9dbfbe71d1a06d/raw/cfd6ba1f0a338a8d6030ad64a04013018314bab6/list_1b_static_site.py">test</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
