--- a/content/Brython.html
+++ b/content/Brython.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cp 2022.html'>cp 2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='About.html'>About</a><li><a href='cp 2022.html'>cp 2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -193,8 +193,10 @@ brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});</s
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
 </p>
+<p><a h2="">
 <script src="./../cmsimde/static/brython.js"></script>
 <script src="./../cmsimde/static/brython_stdlib.js"></script>
+</a></p>
 <p>
 <script>
 window.onload=function(){
@@ -202,6 +204,7 @@ brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
 }
 </script>
 </p>
+<p><a h2="">
 <script>
 window.onload=function(){
 brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
@@ -212,13 +215,16 @@ window.onload=function(){
 brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
 }
 </script>
+</a></p>
 <p><!-- 導入 FileSaver 與 filereader --></p>
 <p>
 <script src="./../cmsimde/static/ace/FileSaver.min.js" type="text/javascript"></script>
 <script src="./../cmsimde/static/ace/filereader.js" type="text/javascript"></script>
 </p>
+<p><a h2="">
 <script src="./../cmsimde/static/ace/FileSaver.min.js" type="text/javascript"></script>
 <script src="./../cmsimde/static/ace/filereader.js" type="text/javascript"></script>
+</a></p>
 <p><!-- 導入 ace --></p>
 <p>
 <script src="./../cmsimde/static/ace/ace.js" type="text/javascript"></script>
@@ -226,10 +232,12 @@ brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
 <script src="./../cmsimde/static/ace/mode-python3.js" type="text/javascript"></script>
 <script src="./../cmsimde/static/ace/snippets/python.js" type="text/javascript"></script>
 </p>
+<p><a h2="">
 <script src="./../cmsimde/static/ace/ace.js" type="text/javascript"></script>
 <script src="./../cmsimde/static/ace/ext-language_tools.js" type="text/javascript"></script>
 <script src="./../cmsimde/static/ace/mode-python3.js" type="text/javascript"></script>
 <script src="./../cmsimde/static/ace/snippets/python.js" type="text/javascript"></script>
+</a></p>
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="./../cmsimde/static/Cango-24v03-min.js"></script>
 <script src="./../cmsimde/static/gearUtils-09.js"></script>
@@ -237,11 +245,13 @@ brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
 <script src="./../cmsimde/static/sylvester.js"></script>
 <script src="./../cmsimde/static/PrairieDraw.js"></script>
 </p>
+<p><a h2="">
 <script src="./../cmsimde/static/Cango-24v03-min.js"></script>
 <script src="./../cmsimde/static/gearUtils-09.js"></script>
 <script src="./../cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="./../cmsimde/static/sylvester.js"></script>
 <script src="./../cmsimde/static/PrairieDraw.js"></script>
+</a></p>
 <p><!-- 請注意, 這裡使用 Javascript 將 localStorage["kw_py_src1"] 中存在近端瀏覽器的程式碼, 由使用者決定存檔名稱--></p>
 <p>
 <script type="text/javascript">
@@ -252,6 +262,7 @@ function doSave(storage_id, filename){
 }
 </script>
 </p>
+<p><a h2="">
 <script type="text/javascript">
 function doSave(storage_id, filename){
     var blob = new Blob([localStorage[storage_id]], {type: "text/plain;charset=utf-8"});
@@ -266,6 +277,7 @@ function doSave(storage_id, filename){
     saveAs(blob, filename+".py");
 }
 </script>
+</a></p>
 <p>
 <script type="text/python3">
 from browser import document as doc
@@ -303,6 +315,7 @@ doc['clear_bd1'].bind('click', clear_bd1)
 run1()
 </script>
 </p>
+<p><a h2="">
 <script type="text/python3">
 from browser import document as doc
 import ace
@@ -373,6 +386,7 @@ doc['clear_bd1'].bind('click', clear_bd1)
 # 呼叫函式執行
 run1()
 </script>
+</a></p>
 <p><!-- add 1 to 100 開始 -->
 <script type="text/python3">
 from browser import document as doc
@@ -400,6 +414,7 @@ def add(ev):
 doc["add1to100"].bind('click', add)
 </script>
 </p>
+<p><a h2="">
 <script type="text/python3">
 from browser import document as doc
 import ace
@@ -450,6 +465,7 @@ def add(ev):
 # id 為 "add1to100" 的按鈕點按時, 執行 add 方法
 doc["add1to100"].bind('click', add)
 </script>
+</a></p>
 <p><!-- add 1 to 100 結束--></p>
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
@@ -502,6 +518,7 @@ doc['clear_bd2'].bind('click', clear_bd2)
 run2()
 </script>
 </p>
+<p><a h2="">
 <script type="text/python3">
 from browser import document as doc
 import ace
@@ -572,6 +589,7 @@ doc['clear_bd2'].bind('click', clear_bd2)
 # 呼叫函式執行
 run2()
 </script>
+</a></p>
 <p><!-- add 1 to 100 part2 開始 -->
 <script type="text/python3">
 from browser import document as doc
@@ -628,6 +646,7 @@ doc["aitetris"].bind("click", aitetris.do)
 ################################## aitetris end
 </script>
 </p>
+<p><a h2="">
 <script type="text/python3">
 from browser import document as doc
 import ace
@@ -736,6 +755,7 @@ aitetris = button2(aitetris_url)
 doc["aitetris"].bind("click", aitetris.do)
 ################################## aitetris end
 </script>
+</a></p>
 <p><!-- add 1 to 100 part2 結束--></p>
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
 <p><!-- 以下的表單與按鈕與前面的 Javascript doSave 函式以及 FileSaver.min.js 互相配合 --></p>
@@ -747,8 +767,7 @@ doc["aitetris"].bind("click", aitetris.do)
 <p><!-- 執行與清除按鈕結束 --></p>
 <p></p>
 <p><!-- 程式執行 ouput 區 --></p>
-<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<br />cp 2022 << <a href='cp 2022.html'>Previous</a> </div>
+<p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p><br />cp 2022 << <a href='cp 2022.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
