--- a/content/w14.html
+++ b/content/w14.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w14</h1>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>w14</h1>
 <p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/0a815ca86d38b380c9bc28af58b3c791/raw/32d3fe6566a2bc4bfb6f71fb81f8f3c2fdfef5c7/w14">w13缺考名單</a></p>
 <p></p>
 <p>加上說明</p>
@@ -207,7 +207,8 @@ cp_stud = cpb_w14.get_stud()
 cp_score = cpb_w14.get_score()
 print(cp_stud, cp_score)
 </pre>
-<p></p><br />w13 << <a href='w13.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p></p>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
