--- a/config/content.htm
+++ b/config/content.htm
@@ -132,7 +132,8 @@ doc["add1to100"].bind('click', add)
 <p></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><h2>W11</h2>
+</p>
+<h2>W11</h2>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"></a></p>
 <p><a href="https://docs.python.org/3/tutorial/controlflow.html"></a></p>
 <p>W11:</p>
@@ -263,10 +264,12 @@ doc["add1to100"].bind('click', add)
 <div id="brython_div1"></div>
 <!-- editor1 結束 -->
 <div id="brython_div2"></div>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script><h2>w12</h2>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+<h2>w12</h2>
 <p>f=c*9/5+32</p>
 <p>c=(f-32)*5/9</p>
-<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換程式</a></p><h2>w13</h2>
+<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換程式</a></p>
+<h2>w13</h2>
 <p>f=c*9/5+32</p>
 <p>c=(f-32)*5/9</p>
 <!-- 
@@ -352,7 +355,8 @@ def get_input(env):
 document["btn1"].bind('click', get_input)
 // ]]&gt;&lt;/script&gt;
 &lt;/p&gt;</pre>
-<p></p><h2>w14</h2>
+<p></p>
+<h2>w14</h2>
 <p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/0a815ca86d38b380c9bc28af58b3c791/raw/32d3fe6566a2bc4bfb6f71fb81f8f3c2fdfef5c7/w14">w13缺考名單</a></p>
 <p></p>
 <p>加上說明</p>
@@ -418,7 +422,18 @@ cp_stud = cpb_w14.get_stud()
 cp_score = cpb_w14.get_score()
 print(cp_stud, cp_score)
 </pre>
-<p></p><h1>About</h1>
+<p></p>
+<h2>w15</h2>
+<p>1.為何學習計算機程式需要建立個人倉儲?</p>
+<p>   A:因為這樣才可以放作業。</p>
+<p>2.全球資訊網能夠提供甚麼功能或有什麼優點?</p>
+<p>   A:分享自己資料的供大家做使用，使人們能夠接續前人的智慧。</p>
+<p>3.Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
+<p>   A:Replit是第三方</p>
+<p>4.https, ssh 到底提供使用者那些功能或優點?</p>
+<p>5.Brython 與 Python 有甚麼差別?</p>
+<p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
+<p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p><h1>About</h1>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
 <p><a href="https://mdecp2022.github.io/site-Liu16552/content/cp2022.html?src=https://gist.githubusercontent.com/Liu16552/c7907f9d0914c7a9dd82edc5bdc59ef1/raw/f3749997f27fbcbcb813dc74870f076c06902245/radom_draw_1b.py&amp;
