--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -132,7 +132,8 @@ doc["add1to100"].bind('click', add)
 <p></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><h2>W11</h2>
+</p>
+<h2>W11</h2>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"></a></p>
 <p><a href="https://docs.python.org/3/tutorial/controlflow.html"></a></p>
 <p>W11:</p>
@@ -263,10 +264,12 @@ doc["add1to100"].bind('click', add)
 <div id="brython_div1"></div>
 <!-- editor1 結束 -->
 <div id="brython_div2"></div>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script><h2>w12</h2>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+<h2>w12</h2>
 <p>f=c*9/5+32</p>
 <p>c=(f-32)*5/9</p>
-<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換程式</a></p><h2>w13</h2>
+<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換程式</a></p>
+<h2>w13</h2>
 <p>f=c*9/5+32</p>
 <p>c=(f-32)*5/9</p>
 <!-- 
@@ -352,9 +355,85 @@ def get_input(env):
 document["btn1"].bind('click', get_input)
 // ]]&gt;&lt;/script&gt;
 &lt;/p&gt;</pre>
-<p></p><h2>w14</h2>
 <p></p>
-<h1>About</h1>
+<h2>w14</h2>
+<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/0a815ca86d38b380c9bc28af58b3c791/raw/32d3fe6566a2bc4bfb6f71fb81f8f3c2fdfef5c7/w14">w13缺考名單</a></p>
+<p></p>
+<p>加上說明</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false"># 導入 ast 模組是希望利用其 literal_eval() 將 dict 格式的字串轉為 dict 資料型別
+# 以利隨後的取值運算
+import ast
+from browser import document
+
+class quiz:
+    def __init__(self, cname, url):
+        self.cname = cname
+        self.url = url
+
+    # 定義一個函式, 以班級代號字串作為輸入, 可以傳回各班修課學員的學號數列
+    def get_stud(self):
+        # 將課程的班級代號字串作為 dict 的 key, 而 2022 fall 的課程代號作為對應值
+        # 使用者可以利用班級代號從 courses dict 取出課程代號
+        courses = {"1a": "0747", "1b": "0761", "2a": "0773", "2b": "0786"}
+        # 利用 c_name 從 courses 得到該學期的課程代號
+        c = courses[self.cname]
+        # 利用課程代號從學校教務主機取的該班修課人員名單
+        curl = "https://nfu.cycu.org/?semester=1111&amp;courseno=" + c + "&amp;column=True"
+        # 讀出各修課人員資料後, 以跳行符號切割, 得到的 data 為數列
+        data = open(curl).read().split("\n")
+        # 因為最後一筆資料為空字串, 因此利用數列運算將其去除
+        stud = data[:-1]
+        # get_stud() 函式最後將對應班級的修課人員學號以數列格式傳回
+        return stud
+        
+    def get_score(self):
+        # 利用 open() 與 read() 讀取考試結果 JSON 檔案
+        json_data = open(self.url).read()
+        # 利用 ast.literal_eval() 將字串 dict, 轉為程式可用的 dict 資料型別
+        big_dict = ast.literal_eval(json_data)
+        # 從 big_dict 中, 取出 body 中的 testuser 欄位資料
+        data = big_dict["body"]["testuser"]
+        # 定義一個空 dict 資料變數, 隨後利用迴圈逐一將學號作為 key, 考試成績為 valude
+        # 組成 quiz_dict 的資料內容, 以便之後可以用學號當作輸入, 取得該員考試成績
+        quiz_dict = {}
+        for i in data:
+            # data 資料中的 user_name 為考試學員的帳號, 也就是學號
+            stud_id = data[i]["user_name"]
+            # data 資料中的 total_score 欄位為考試成績
+            # 因為考試成績為字串, 先轉為浮點數後, 再轉為整數
+            stud_score = int(float(data[i]["total_score"]))
+            # 逐一以學號為 key, 考試成績為對應 value, 將資料放入 quiz_dict
+            quiz_dict[stud_id] = stud_score
+        # 取得各學員的考試成績 quiz_dict 後, 將資料傳回
+        return quiz_dict
+
+try:
+    url = document.query["url"]
+except:
+    url = "https://gist.githubusercontent.com/mdecycu/9df4b372ac1b7386cf259ced15f1a2b2/raw/a6825f13b1bb0b61e09e74dd117729eefe1d947f/20221110_cp1b_w10_quiz.json"
+
+try:
+    cname =document.query["cname"]
+except:
+    cname = "1b"
+
+cpb_w14 = quiz(cname, url)
+cp_stud = cpb_w14.get_stud()
+cp_score = cpb_w14.get_score()
+print(cp_stud, cp_score)
+</pre>
+<p></p>
+<h2>w15-1</h2>
+<p>1.為何學習計算機程式需要建立個人倉儲?</p>
+<p>   A:因為這樣才可以放作業。</p>
+<p>2.全球資訊網能夠提供甚麼功能或有什麼優點?</p>
+<p>   A:分享自己資料的供大家做使用，使人們能夠接續前人的智慧。</p>
+<p>3.Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
+<p>   A:Replit是第三方</p>
+<p>4.https, ssh 到底提供使用者那些功能或優點?</p>
+<p>5.Brython 與 Python 有甚麼差別?</p>
+<p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
+<p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p><h1>About</h1>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
 <p><a href="https://mdecp2022.github.io/site-Liu16552/content/cp2022.html?src=https://gist.githubusercontent.com/Liu16552/c7907f9d0914c7a9dd82edc5bdc59ef1/raw/f3749997f27fbcbcb813dc74870f076c06902245/radom_draw_1b.py&amp;
