--- a/content/W11.html
+++ b/content/W11.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li></ul><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -272,7 +272,8 @@ doc["add1to100"].bind('click', add)
 <div id="brython_div1"></div>
 <!-- editor1 結束 -->
 <div id="brython_div2"></div>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script><br />W10 << <a href='W10.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+<br />W10 << <a href='W10.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
       <div class="container">
