--- a/content/w15.html
+++ b/content/w15.html
@@ -141,11 +141,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w12</h1>
-<p>f=c*9/5+32</p>
-<p>c=(f-32)*5/9</p>
-<p><a href="https://mdecp2022.github.io/site-Changyou41123220/content/Brython.html?src=https://gist.githubusercontent.com/Changyou41123220/18c9890e476f62b535677f1f43b5fb38/raw/8f3213bc224d5be8cd1d4a1b1db9abc1346ea770/%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258F">溫度轉換程式</a></p>
-<br />W11 << <a href='W11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>w15</h1>
+<p>1.為何學習計算機程式需要建立個人倉儲?</p>
+<p>   A:因為這樣才可以放作業。</p>
+<p>2.全球資訊網能夠提供甚麼功能或有什麼優點?</p>
+<p>   A:分享自己資料的供大家做使用，使人們能夠接續前人的智慧。</p>
+<p>3.Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
+<p>   A:Replit是第三方</p>
+<p>4.https, ssh 到底提供使用者那些功能或優點?</p>
+<p>5.Brython 與 Python 有甚麼差別?</p>
+<p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
+<p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p><br />w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
