--- a/content/w15.html
+++ b/content/w15.html
@@ -149,13 +149,13 @@ img.add_border {
 <p>3.Replit, stud.cycu.org 與 localhost 分別代表甚麼?</p>
 <p>   A:Replit是第三方寫程式及維護網站  stud.cycu.org是遠端維護網站 localhost是近端維護網站</p>
 <p>4.https, ssh 到底提供使用者那些功能或優點?</p>
-<p>   A:</p>
+<p>   A: ssh 在git clone時需要設定key。https 在git clone不需要設定key,可直接載下來。</p>
 <p>5.Brython 與 Python 有甚麼差別?</p>
-<p>   A:</p>
+<p>   A:Brython是執行Python的網站，Python是編寫程式的語言。</p>
 <p>6.能夠直接在瀏覽器中以 Brython 繪製中華民國國旗, 或模擬綠色方塊在方塊格點中任意移動, 代表甚麼?</p>
-<p>   A:</p>
+<p>   A:Brython很厲害。</p>
 <p>7.變數, 字串, 整數, 浮點數, 數列, Tuple, Dictionary, 函式, 重複迴圈, class, 物件導向, 資料庫, 這些名詞對您而言代表甚麼?</p>
-<p>   A:</p><br />w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p>   A:邏輯思考</p><br />w14 << <a href='w14.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
